# nautilus_trader

./: .pre-commit-config.yaml  .typos.toml  Cargo.toml  Makefile  README.md  RELEASES.md  deny.toml  osv-scanner.toml  pyproject.toml  test
.config/: nextest.toml
.github/workflows/: build-v2.yml  build.yml  nightly-merge.yml  security.yml
.pre-commit-hooks/: cargo_clippy_and_doc.sh  check_copyright_year.sh  check_error_conventions.sh  check_nautilus_conventions.sh
.supply-chain/: config.toml
crates/adapters/architect/: Cargo.toml  README.md
crates/adapters/architect/src/: config.rs  error.rs  lib.rs
crates/adapters/architect/src/common/: consts.rs  credential.rs  enums.rs  mod.rs  parse.rs
crates/adapters/architect/src/http/: client.rs  error.rs  mod.rs  models.rs  parse.rs  query.rs
crates/adapters/architect/src/python/: http.rs  mod.rs  websocket.rs
crates/adapters/architect/src/websocket/: error.rs  messages.rs  mod.rs
crates/adapters/architect/src/websocket/data/: client.rs  handler.rs  mod.rs  parse.rs
crates/adapters/architect/src/websocket/orders/: client.rs  handler.rs  mod.rs
crates/adapters/architect/tests/: http.rs  websocket.rs
crates/backtest/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/common/: Cargo.toml
crates/core/: Cargo.toml  build.rs
crates/live/: Cargo.toml
crates/model/: Cargo.toml
crates/network/: Cargo.toml
crates/persistence/: Cargo.toml
crates/pyo3/: Cargo.toml
crates/serialization/: README.md
crates/system/: Cargo.toml
crates/trading/: Cargo.toml
docs/concepts/: actors.md  adapters.md  architecture.md  backtesting.md  data.md  instruments.md  live.md  logging.md  orders.md  portfolio.md  reports.md
docs/developer_guide/: adapters.md  environment_setup.md  rust.md
docs/getting_started/: installation.md  quickstart.ipynb
docs/integrations/: bybit.md  databento.md  kraken.md
docs/tutorials/: parquet_explorer.ipynb
examples/backtest/: polymarket_simple_quoter.py
examples/sandbox/: interactive_brokers_sandbox.py
nautilus_trader/accounting/: manager.pyx
nautilus_trader/analysis/: __init__.py  config.py  tearsheet.py  themes.py
nautilus_trader/backtest/: config.py  data_client.pyx  engine.pxd  engine.pyx  node.py  option_exercise.pyx
nautilus_trader/cache/: adapter.py  cache.pyx
nautilus_trader/common/: actor.pxd  actor.pyx
nautilus_trader/core/: nautilus_pyo3.pyi
nautilus_trader/data/: aggregation.pxd  aggregation.pyx  client.pxd  client.pyx  config.py  engine.pxd  engine.pyx
nautilus_trader/execution/: algorithm.pxd  algorithm.pyx  engine.pyx  messages.pyx  reports.py  trailing.pyx
nautilus_trader/live/: data_client.py  execution_engine.py  reconciliation.py
nautilus_trader/model/: custom.py  data.pyx  enums.py  greeks.pyx  objects.pxd  objects.pyx
nautilus_trader/persistence/: funcs.py  writer.py
nautilus_trader/portfolio/: portfolio.pyx
nautilus_trader/risk/: engine.pyx
nautilus_trader/system/: kernel.py
nautilus_trader/test_kit/: providers.py
nautilus_trader/trading/: messages.py
python/: generate_stubs.py
scripts/: regen_capnp.sh
tests/: conftest.py
tests/acceptance_tests/: test_backtest.py  test_blackbox.py
(+898 files in other folders)
